--- a/template.html
+++ b/template.html
@@ -78,7 +78,9 @@
       <!-- begin post -->
       <div class="post f">
         <blockquote><p><strong>版权声明</strong><br/>
-          妹子图简单适配, 暂不支持 ooxx, 评论, 返回上一页
+          妹子图简单适配, 暂不支持返回上一页
+          <br />
+          为了更好的使用妹子图, 请不要公开分享
         </blockquote>
       </div>
       <!-- end post -->
